[gd_scene load_steps=59 format=3 uid="uid://cuwogci2gi0mo"]

[ext_resource type="Script" uid="uid://ct7riolm0p82a" path="res://Scripts/Scripts do mapa/city.gd" id="1_m48dq"]
[ext_resource type="Texture2D" uid="uid://ds24ijyxkyss5" path="res://sprites/UI/botão.png" id="2_d1uql"]
[ext_resource type="Script" uid="uid://c5b5853neg4pb" path="res://Scripts/Scripts do mapa/city_interact.gd" id="2_kmlhq"]
[ext_resource type="Texture2D" uid="uid://bt3ayacrl3sse" path="res://sprites/UI/botãoHover.png" id="2_sy8bh"]
[ext_resource type="Script" uid="uid://bem6sc3kgikjy" path="res://Scripts/Scripts do mapa/shop_item.gd" id="3_c4yj0"]
[ext_resource type="AudioStream" uid="uid://b0tmaj1elpqpx" path="res://audio/Efeitos/gas.mp3" id="3_q0xgp"]
[ext_resource type="AudioStream" uid="uid://di5041ei44t3q" path="res://audio/Efeitos/shop.mp3" id="5_1g4t8"]
[ext_resource type="Texture2D" uid="uid://vk1hw5r1ocr4" path="res://sprites/UI/shopItemHover.png" id="5_4dty0"]
[ext_resource type="Texture2D" uid="uid://c2jumwx08o0rj" path="res://sprites/UI/botaoPressed.png" id="5_11trk"]
[ext_resource type="Texture2D" uid="uid://buaia0aa5o8nd" path="res://sprites/UI/shopBack.png" id="6_3y4qy"]
[ext_resource type="AudioStream" uid="uid://d4j7gcqrf5vne" path="res://audio/Efeitos/mechanic.mp3" id="6_8jp5u"]
[ext_resource type="Texture2D" uid="uid://47vomt8bgqew" path="res://sprites/UI/shopItem.png" id="6_8rr74"]
[ext_resource type="Texture2D" uid="uid://52tkft5j54dw" path="res://sprites/items/gas.png" id="8_cimqg"]
[ext_resource type="Texture2D" uid="uid://8pg5ns8eun8d" path="res://sprites/items/banann.png" id="9_1g4t8"]
[ext_resource type="AudioStream" uid="uid://iixbasjgsd1h" path="res://audio/Efeitos/null.mp3" id="9_vpyqe"]
[ext_resource type="Texture2D" uid="uid://63iprs3p6dfi" path="res://sprites/items/coolant.png" id="10_8jp5u"]
[ext_resource type="Texture2D" uid="uid://cdht3spd6svk" path="res://sprites/items/fixer.png" id="12_q0xgp"]
[ext_resource type="FontFile" uid="uid://cha3o3ygn2hp0" path="res://sprites/chawp.otf" id="18_cp3xk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_11trk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rs8q5"]
texture = ExtResource("2_sy8bh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eufuq"]
texture = ExtResource("5_11trk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sy8bh"]
texture = ExtResource("2_d1uql")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vpyqe"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vpyqe"]
texture = ExtResource("5_4dty0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cp3xk"]
texture = ExtResource("6_8rr74")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cp3xk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q67qe"]
texture = ExtResource("5_4dty0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1dt52"]
texture = ExtResource("6_8rr74")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q67qe"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wxno1"]
texture = ExtResource("5_4dty0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mrxqk"]
texture = ExtResource("6_8rr74")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1dt52"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_saoq4"]
texture = ExtResource("5_4dty0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iamc7"]
texture = ExtResource("6_8rr74")

[sub_resource type="Animation" id="Animation_1g4t8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-234, -92)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-182, -92)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-126, -92)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-66, -93)]
}

[sub_resource type="Animation" id="Animation_8jp5u"]
resource_name = "off"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-234, 1), Vector2(-234, -102)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-182, 1), Vector2(-182, -102)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-126, 1), Vector2(-126, -102)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-66, 0), Vector2(-66, -103)]
}

[sub_resource type="Animation" id="Animation_cimqg"]
resource_name = "on"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-234, -92), Vector2(-234, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-182, -92), Vector2(-182, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-126, -92), Vector2(-126, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-66, -93), Vector2(-66, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8jp5u"]
_data = {
&"RESET": SubResource("Animation_1g4t8"),
&"off": SubResource("Animation_8jp5u"),
&"on": SubResource("Animation_cimqg")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wxno1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cimqg"]
texture = ExtResource("2_sy8bh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dixtv"]
texture = ExtResource("5_11trk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3y4qy"]
texture = ExtResource("2_d1uql")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mrxqk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1g4t8"]
texture = ExtResource("2_sy8bh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_74c14"]
texture = ExtResource("5_11trk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m2eyg"]
texture = ExtResource("2_d1uql")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_saoq4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8jp5u"]
texture = ExtResource("2_sy8bh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_chi56"]
texture = ExtResource("5_11trk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4dty0"]
texture = ExtResource("2_d1uql")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iamc7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q0xgp"]
texture = ExtResource("2_sy8bh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6gdyd"]
texture = ExtResource("5_11trk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uxqds"]
texture = ExtResource("2_d1uql")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eufuq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_11trk"]
texture = ExtResource("2_sy8bh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fqb5b"]
texture = ExtResource("5_11trk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8rr74"]
texture = ExtResource("2_d1uql")

[node name="city" type="Node2D"]
script = ExtResource("1_m48dq")
mechanic_audio = ExtResource("6_8jp5u")
gas_audio = ExtResource("3_q0xgp")

[node name="shop" type="Button" parent="."]
offset_left = 327.0
offset_top = 70.0
offset_right = 373.0
offset_bottom = 116.0
tooltip_text = "Opens the shop."
theme_override_styles/focus = SubResource("StyleBoxEmpty_11trk")
theme_override_styles/hover = SubResource("StyleBoxTexture_rs8q5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_eufuq")
theme_override_styles/normal = SubResource("StyleBoxTexture_sy8bh")
alignment = 2
autowrap_mode = 2
clip_text = true
text_direction = 1
script = ExtResource("2_kmlhq")
buttonType = 1
shop_audio = ExtResource("5_1g4t8")

[node name="audio_player" type="AudioStreamPlayer2D" parent="shop"]
stream = ExtResource("9_vpyqe")

[node name="1" type="Button" parent="shop" groups=["shop_item"]]
z_index = -1
layout_mode = 0
offset_left = -234.0
offset_top = -92.0
offset_right = -226.0
offset_bottom = -84.0
scale = Vector2(3.99, 3.99)
theme_override_styles/focus = SubResource("StyleBoxEmpty_vpyqe")
theme_override_styles/hover = SubResource("StyleBoxTexture_vpyqe")
theme_override_styles/normal = SubResource("StyleBoxTexture_cp3xk")
script = ExtResource("3_c4yj0")
item_type = 1
item_price = 20

[node name="Sprite2D" type="Sprite2D" parent="shop/1"]
position = Vector2(4.01002, 3.7594)
scale = Vector2(0.0613252, 0.0613252)
texture = ExtResource("8_cimqg")

[node name="2" type="Button" parent="shop" groups=["shop_item"]]
z_index = -1
layout_mode = 0
offset_left = -182.0
offset_top = -92.0
offset_right = -174.0
offset_bottom = -84.0
scale = Vector2(3.99, 3.99)
theme_override_styles/focus = SubResource("StyleBoxEmpty_cp3xk")
theme_override_styles/hover = SubResource("StyleBoxTexture_q67qe")
theme_override_styles/normal = SubResource("StyleBoxTexture_1dt52")
script = ExtResource("3_c4yj0")
item_type = 2
item_price = 1

[node name="Sprite2D" type="Sprite2D" parent="shop/2"]
position = Vector2(4.26065, 4.01002)
scale = Vector2(0.0613252, 0.0613252)
texture = ExtResource("9_1g4t8")

[node name="3" type="Button" parent="shop" groups=["shop_item"]]
z_index = -1
layout_mode = 0
offset_left = -126.0
offset_top = -92.0
offset_right = -118.0
offset_bottom = -84.0
scale = Vector2(3.99, 3.99)
theme_override_styles/focus = SubResource("StyleBoxEmpty_q67qe")
theme_override_styles/hover = SubResource("StyleBoxTexture_wxno1")
theme_override_styles/normal = SubResource("StyleBoxTexture_mrxqk")
script = ExtResource("3_c4yj0")
item_type = 3
item_price = 30

[node name="Sprite2D" type="Sprite2D" parent="shop/3"]
position = Vector2(4.01003, 3.759)
scale = Vector2(0.0613252, 0.0613252)
texture = ExtResource("10_8jp5u")

[node name="4" type="Button" parent="shop" groups=["shop_item"]]
z_index = -1
layout_mode = 0
offset_left = -66.0
offset_top = -93.0
offset_right = -58.0
offset_bottom = -85.0
scale = Vector2(3.99, 3.99)
theme_override_styles/focus = SubResource("StyleBoxEmpty_1dt52")
theme_override_styles/hover = SubResource("StyleBoxTexture_saoq4")
theme_override_styles/normal = SubResource("StyleBoxTexture_iamc7")
script = ExtResource("3_c4yj0")
item_type = 4
item_price = 45

[node name="ShopBack" type="Sprite2D" parent="shop/4"]
z_index = -2
z_as_relative = false
position = Vector2(-17.2932, 5.01253)
scale = Vector2(0.250627, 0.250627)
texture = ExtResource("6_3y4qy")

[node name="Sprite2D" type="Sprite2D" parent="shop/4"]
position = Vector2(4.01003, 3.759)
scale = Vector2(0.0613252, 0.0613252)
texture = ExtResource("12_q0xgp")

[node name="RichTextLabel" type="RichTextLabel" parent="shop"]
layout_mode = 0
offset_left = 50.0
offset_top = 14.0
offset_right = 131.0
offset_bottom = 54.0
theme_override_colors/default_color = Color(1, 0.980392, 0.431373, 0.627451)
theme_override_fonts/normal_font = ExtResource("18_cp3xk")
text = "Shop"

[node name="shop_anim" type="AnimationPlayer" parent="shop"]
libraries = {
&"": SubResource("AnimationLibrary_8jp5u")
}

[node name="mechanic" type="Button" parent="."]
offset_left = 327.0
offset_top = 120.0
offset_right = 373.0
offset_bottom = 166.0
tooltip_text = "Fixes any engine issues your bike might have, while also cooling your engine. Costs 60 bucks."
theme_override_styles/focus = SubResource("StyleBoxEmpty_wxno1")
theme_override_styles/hover = SubResource("StyleBoxTexture_cimqg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dixtv")
theme_override_styles/normal = SubResource("StyleBoxTexture_3y4qy")
text = "
"
alignment = 2
autowrap_mode = 1
clip_text = true
script = ExtResource("2_kmlhq")
buttonType = 3

[node name="RichTextLabel" type="RichTextLabel" parent="mechanic"]
layout_mode = 0
offset_left = 46.0
offset_top = 14.0
offset_right = 156.0
offset_bottom = 48.0
theme_override_colors/default_color = Color(1, 0.981, 0.43, 0.627451)
theme_override_fonts/normal_font = ExtResource("18_cp3xk")
theme_override_font_sizes/normal_font_size = 12
text = "Mechanic"

[node name="audio_player" type="AudioStreamPlayer2D" parent="mechanic"]
stream = ExtResource("6_8jp5u")

[node name="interact" type="Button" parent="."]
offset_left = 327.0
offset_top = 170.0
offset_right = 373.0
offset_bottom = 216.0
tooltip_text = "Have a look around the city. Take the scenery in."
theme_override_styles/focus = SubResource("StyleBoxEmpty_mrxqk")
theme_override_styles/hover = SubResource("StyleBoxTexture_1g4t8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_74c14")
theme_override_styles/normal = SubResource("StyleBoxTexture_m2eyg")
alignment = 2
script = ExtResource("2_kmlhq")
buttonType = 2

[node name="RichTextLabel" type="RichTextLabel" parent="interact"]
layout_mode = 0
offset_left = 47.0
offset_top = 14.0
offset_right = 138.0
offset_bottom = 54.0
theme_override_colors/default_color = Color(1, 0.980392, 0.431373, 0.627451)
theme_override_fonts/normal_font = ExtResource("18_cp3xk")
theme_override_font_sizes/normal_font_size = 14
text = "Interact"

[node name="audio_player" type="AudioStreamPlayer2D" parent="interact"]

[node name="gas" type="Button" parent="."]
offset_left = 327.0
offset_top = 220.0
offset_right = 373.0
offset_bottom = 266.0
tooltip_text = "Fully refuels your tank. Costs 60 bucks."
theme_override_styles/focus = SubResource("StyleBoxEmpty_saoq4")
theme_override_styles/hover = SubResource("StyleBoxTexture_8jp5u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_chi56")
theme_override_styles/normal = SubResource("StyleBoxTexture_4dty0")
alignment = 2
script = ExtResource("2_kmlhq")
buttonType = 4

[node name="RichTextLabel" type="RichTextLabel" parent="gas"]
layout_mode = 0
offset_left = 49.0
offset_top = 14.0
offset_right = 132.0
offset_bottom = 54.0
theme_override_colors/default_color = Color(1, 0.980392, 0.431373, 0.627451)
theme_override_fonts/normal_font = ExtResource("18_cp3xk")
text = "Refuel"

[node name="audio_player" type="AudioStreamPlayer2D" parent="gas"]
stream = ExtResource("3_q0xgp")

[node name="work" type="Button" parent="."]
offset_left = 327.0
offset_top = 270.0
offset_right = 373.0
offset_bottom = 316.0
size_flags_horizontal = 3
tooltip_text = "Work as a waitress at a local restaurant. Earns you 80 bucks."
theme_override_styles/focus = SubResource("StyleBoxEmpty_iamc7")
theme_override_styles/hover = SubResource("StyleBoxTexture_q0xgp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6gdyd")
theme_override_styles/normal = SubResource("StyleBoxTexture_uxqds")
alignment = 2
script = ExtResource("2_kmlhq")
buttonType = 6

[node name="RichTextLabel" type="RichTextLabel" parent="work"]
layout_mode = 0
offset_left = 51.0
offset_top = 16.0
offset_right = 114.0
offset_bottom = 56.0
theme_override_colors/default_color = Color(1, 0.980392, 0.431373, 0.627451)
theme_override_fonts/normal_font = ExtResource("18_cp3xk")
text = "Work"

[node name="audio_player" type="AudioStreamPlayer2D" parent="work"]

[node name="book" type="Button" parent="."]
offset_left = 327.0
offset_top = 334.0
offset_right = 373.0
offset_bottom = 380.0
tooltip_text = "Opens your postal card collection."
theme_override_styles/focus = SubResource("StyleBoxEmpty_eufuq")
theme_override_styles/hover = SubResource("StyleBoxTexture_11trk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fqb5b")
theme_override_styles/normal = SubResource("StyleBoxTexture_8rr74")
alignment = 2
script = ExtResource("2_kmlhq")
buttonType = 5

[node name="RichTextLabel" type="RichTextLabel" parent="book"]
layout_mode = 0
offset_left = 49.0
offset_top = 14.0
offset_right = 118.0
offset_bottom = 54.0
theme_override_colors/default_color = Color(1, 0.980392, 0.431373, 0.627451)
theme_override_fonts/normal_font = ExtResource("18_cp3xk")
text = "Cards"

[node name="audio_player" type="AudioStreamPlayer2D" parent="book"]

[node name="audio_player" type="AudioStreamPlayer2D" parent="."]

[connection signal="mouse_entered" from="shop/1" to="shop/1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="shop/1" to="shop/1" method="_on_mouse_exited"]
[connection signal="pressed" from="shop/1" to="shop/1" method="_on_pressed"]
[connection signal="mouse_entered" from="shop/2" to="shop/2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="shop/2" to="shop/2" method="_on_mouse_exited"]
[connection signal="pressed" from="shop/2" to="shop/2" method="_on_pressed"]
[connection signal="mouse_entered" from="shop/3" to="shop/3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="shop/3" to="shop/3" method="_on_mouse_exited"]
[connection signal="pressed" from="shop/3" to="shop/3" method="_on_pressed"]
[connection signal="mouse_entered" from="shop/4" to="shop/4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="shop/4" to="shop/4" method="_on_mouse_exited"]
[connection signal="pressed" from="shop/4" to="shop/4" method="_on_pressed"]
